--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -7,6 +7,7 @@
       <a class="nav-item nav-link" routerLink="/add" routerLinkActive="text-danger">ADD</a>
       <a class="nav-item nav-link" routerLink="/list" routerLinkActive="text-danger">LIST</a>
       <a class="nav-item nav-link" routerLink="/login" routerLinkActive="text-danger">Login</a>
+      <a class="nav-item nav-link" routerLink="/signup" routerLinkActive="text-danger">Sign up</a>
   </div>
 </nav>
 <div class="container">
