--- a/src/app/add-task/add-task.component.html
+++ b/src/app/add-task/add-task.component.html
@@ -1,22 +1,25 @@
-<p>add-task works!</p>
+
+<!-- <p>add-task works!</p> -->
 <div class="card shadow text-center mb-5">
   <div class="card-header bg-primary text-light">
-      <h4>ADD TODO</h4>
+      <h4>Sign Up</h4>
   </div>
 
   <div class="card-body">
-      <form [formGroup]="task" (submit)="onSubmit()">
+      <form [formGroup]="task" (submit)="onsubmit()">
           <div class="form-group">
               <input type="text" name="title" class="form-control" placeholder="Title" formControlName="title" required>
           </div>
           <div class="form-group">
-            <input type="text" name="description" class="form-control" placeholder="" formControlName="description" required>
-          </div>
+            <input type="text" name="title" class="form-control" placeholder="description" formControlName="description" required>
+        </div>
+
           <!-- <div class="form-group">
             <input type="text" name="completed" class="form-control" placeholder="" formControlName="completed" required>
           </div> -->
-          <button class="btn btn-primary" type="submit"> ADD </button>
+          <button class="btn btn-primary" type="submit"> ADD Task</button>
       </form>
       <!-- {{todo}} -->
   </div>
+  <!-- <button class="btn btn-primary" (click)="signInWithGoogle()" >Sign In google</button> -->
 </div>
