--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -11,6 +11,134 @@
   </div>
 </nav>
 <div class="container">
+  <div>
+    <!DOCTYPE html>
+<html>
+
+<head>
+	<title>Adding image to dropdown list</title>
+	<style>
+		.dropbtn {
+			background-color: #4CAF50;
+			color: white;
+			padding: 16px;
+			font-size: 16px;
+			border: none;
+			cursor: pointer;
+		}
+
+		.dropdown {
+			position: relative;
+			display: inline-block;
+		}
+
+		.dropdown-content {
+			display: none;
+			position: absolute;
+			background-color: #f9f9f9;
+			min-width: 160px;
+			box-shadow: 0px 8px 16px
+				0px rgba(0, 0, 0, 0.2);
+			z-index: 1;
+		}
+
+		.dropdown-content a {
+			color: black;
+			padding: 12px 16px;
+			text-decoration: none;
+			display: block;
+		}
+
+		.dropdown-content a:hover {
+			background-color: #f1f1f1
+		}
+
+		.dropdown:hover .dropdown-content {
+			display: block;
+		}
+
+		.dropdown:hover .dropbtn {
+			background-color: #3e8e41;
+		}
+	</style>
+</head>
+
+<body>
+	<div>
+
+
+		<div class="dropdown">
+			<button class="dropbtn">
+				Country Flags
+			</button>
+
+			<div class="dropdown-content">
+				<a href="#">
+					<img src=
+"https://media.geeksforgeeks.org/wp-content/uploads/20200630132503/iflag.jpg"
+					width="20" height="15"> India</a>
+
+				<a href="#">
+					<img src=
+"https://media.geeksforgeeks.org/wp-content/uploads/20200630132504/uflag.jpg"
+					width="20" height="15"> USA</a>
+				<a href="#">
+					<img src=
+"https://media.geeksforgeeks.org/wp-content/uploads/20200630132502/eflag.jpg"
+					width="20" height="15"> England</a>
+				<a href="#">
+					<img src=
+"https://media.geeksforgeeks.org/wp-content/uploads/20200630132500/bflag.jpg"
+					width="20" height="15"> Brazil</a>
+			</div>
+		</div>
+	</div>
+
+
+  <div>
+    <!-- <ng-multiselect-dropdown
+  [placeholder]="'custom placeholder'"
+  [settings]="dropdownSettings"
+  [data]="dropdownList"
+  [(ngModel)]="selectedItems"
+  (onSelect)="onItemSelect($event)"
+  (onSelectAll)="onSelectAll($event)"
+>
+</ng-multiselect-dropdown> -->
+    <form [formGroup]="myForm">
+      <ng-multiselect-dropdown
+          name="city"
+          [placeholder]="'Select City'"
+          [data]="cities"
+          formControlName="city"
+          [disabled]="disabled"
+          [settings]="dropdownSettings"
+          (onSelect)="onItemSelect($event)">
+      </ng-multiselect-dropdown>
+      <ng-template #optionsTemplate let-item let-option="option" let-id="id" let-isSelected="isSelected">
+      <div style="padding:1px 10px;margin-right:10px;right:2px;top:-2px">
+        <img [src]="getItems[id].image" style="width: 18px; margin: 0 20px;" />
+        <label style="color: #333;min-width: 130px;" [ngStyle]="{ 'color': getItems[id].isDisabled? 'lightgrey':''}">
+          {{getItems[id].item_text}}
+        </label>
+      </div>
+     </ng-template>
+     <ng-template #optionSelectedTemplate let-option="option"  let-id="id">
+       <div>
+         <img [src]="getItems[id].image" style="width: 18px; margin-right: 2px;" />
+        {{option}}
+       </div>
+     </ng-template>
+ </form>
+  </div>
+
+
+</body>
+
+</html>
+
+    <!-- <ckeditor [editor]="Editor" data="<p>Hello, world!</p>"></ckeditor> -->
+  </div>
   <div class="row">
     <div class="col-lg-12">
 
